[gd_scene load_steps=2 format=3 uid="uid://bx5maxop3y0xi"]

[ext_resource type="Script" path="res://scenes/manager/game_manager.gd" id="1_lnmjf"]

[node name="GameManager" type="Node" groups=["game_manager"]]
script = ExtResource("1_lnmjf")

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.3
